[project]
name = "jimmerrag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-huggingface>=1.0.1",
    "langchain-openai",
    "markdown>=3.10",
    "openai>=2.7.1",
    "pypdf>=6.1.3",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
